--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "version": 2,
   "functions": {
     "api/index.ts": {
-      "runtime": "nodejs20.x",
+      "runtime": "nodejs18.x",
       "maxDuration": 60
     }
   },
