--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 60
-    }
-  },
-  "installCommand": "npm install --ignore-scripts",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs"
 }
