--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler",
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,6 +17,7 @@
   "include": [
     "src/**/*",
     "api/**/*.ts",
-    "mastra.config.ts"
+    "mastra.config.ts",
+    "types/**/*.d.ts"
   ]
 }
